kubernetes/apps/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "immich.k8s.local"
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
